On hover or focus don't make text bold. This prevents the element from changing size and possibly becoming too big for the screen size which causes the navbar to become bigger vertically.

--- a/website/app/style-3.css
+++ b/website/app/style-3.css
@@ -448,6 +448,10 @@ td.tag-width {
   background-color: #eeeeee;
 }
 
+ul.nav li a:hover, a:focus {
+  font-weight: normal;
+}
+
 .navbar-custom .icon-bar {
   background-color: #0C5C86;
 }
